# square-print-pattern_c

./: CMakeLists.txt  main.c
